--- a/jd-scroll/css/index.css
+++ b/jd-scroll/css/index.css
@@ -23,6 +23,7 @@
     width: 5rem;
     text-align: center;
     display: inline-block;
+    cursor: pointer;
 }
 
 .smallFt{
@@ -32,6 +33,7 @@
 .centerTitle{
     font-size: 30px;
     margin: 40px;
+    cursor: none;
 }
 
 .scrollBox{
