--- a/jd-scroll/css/index.css
+++ b/jd-scroll/css/index.css
@@ -1,7 +1,12 @@
 .headerBox{
-    height: 100px;
+    height: 150px;
     background: rgba(0, 0, 0, .5);
     width: 100%;
+    flex-direction: column;
+}
+
+.outterBox{
+    flex-direction: column;
 }
 
 .flexBox{
@@ -24,6 +29,8 @@
     text-align: center;
     display: inline-block;
     cursor: pointer;
+    /* min-height: 16px;
+    height: 16px; */
 }
 
 .smallFt{
@@ -39,7 +46,39 @@
 .scrollBox{
     /* transition: all .6s ease; */
     width: 100%;
-    height: 100%;
+    height: 70%;
     position: relative;
     overflow: hidden;
 }
+
+.infoBox{
+    /* margin-top: 100px; */
+    position: relative;
+}
+
+.infoBox::before{
+    content: "";
+    display: block;
+    position: absolute;
+    width: 80px;
+    height: 1px;
+    background: #000;
+    left: -90px;
+    top: 60%;
+}
+
+.infoBox::after{
+    content: "";
+    display: block;
+    position: absolute;
+    width: 80px;
+    height: 1px;
+    background: #000;
+    right: -90px;
+    top: 60%;
+}
+
+.contain{
+    margin-top: 30px;
+}
+
