--- a/jd-scroll/css/index.css
+++ b/jd-scroll/css/index.css
@@ -82,3 +82,15 @@
     margin-top: 30px;
 }
 
+.btnBox{
+    display: inline-flex;
+    width: 160px;
+    font-size: 30px;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.btnBox div{
+    z-index: 10;
+}
+
