--- a/jd-scroll/css/index.css
+++ b/jd-scroll/css/index.css
@@ -23,9 +23,26 @@
     /* display: flex; */
 }
 
+.IE_list{
+    position: absolute;
+    white-space: nowrap;
+}
+
+.IEBox{
+    text-align: center;
+}
+
+.IE_list>span{
+    width: 80px;
+    margin: 0 10px;
+    text-align: center;
+    display: inline-block;
+    cursor: pointer;
+}
+
 .list>span{
     transition: all .3s ease;
-    width: 5rem;
+    min-width: 5rem;
     text-align: center;
     display: inline-block;
     cursor: pointer;
@@ -39,7 +56,8 @@
 
 .centerTitle{
     font-size: 30px;
-    margin: 40px;
+    margin: 40px!important;
+    width: auto!important;
     cursor: none;
 }
 
@@ -54,6 +72,7 @@
 .infoBox{
     /* margin-top: 100px; */
     position: relative;
+    margin: 0 auto;
 }
 
 .infoBox::before{
@@ -94,3 +113,27 @@
     z-index: 10;
 }
 
+.IE_btnBox{
+    position: absolute;
+    display: block;
+    width: 210px;
+    font-size: 30px;
+    /* align-items: center;
+    justify-content: space-between; */
+    left: 0; top: 0; right: 0; bottom: 0;
+    margin: auto;
+    height: 30px;
+}
+
+.IE_btnBox div{
+    position: absolute;
+    z-index: 10;
+}
+
+.IE_btnBox .leftBtn{
+    left: 0;
+}
+
+.IE_btnBox .rightBtn{
+    right: 0;
+}
